# mathvideo

./: google-desktop-ajqqeovh26omqnul (copy)_compressed_adaptive_info.txt  google-desktop-ajqqeovh26omqnul_compressed_adaptive_info.txt
cpp_implementation/: CMakeLists.txt
cpp_implementation/include/: image_compressor.hpp
cpp_implementation/include/algorithms/: region_grower.hpp
cpp_implementation/include/utils/: image_utils.hpp
cpp_implementation/src/: main.cpp
cpp_implementation/src/algorithms/: adaptive_region_grower.cpp
cpp_implementation/src/utils/: image_utils.cpp
image_compression/: image_compressor.py  main.py  pathfinding.py  progress.py  region_algorithms.py  utils.py
